# pc-audio-ai-assistant

./: .gitignore  README.md  benchmark_stt_quality.py  pyproject.toml  record_test.py  transcribe_with_whispercpp.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
app/: config.py  main.py  utils.py
audio/: capture.py  preprocessor.py  splitter.py
detection/: intent_classifier.py  question_filter.py
diarization/: __init__.py  diarizer.py
llm/: engine.py  prompt_templates.py
retrieval/: indexer.py  vector_store.py
stt/: cleaner.py  transcriber.py
ui/: overlay.py
