[project]
name = "pc-audio-ai-assistant"
version = "0.1.0"
description = "Real-time AI assistant that listens to PC audio and responds to questions"
authors = [{ name = "Gonzalo Ruiz Camauer", email = "example@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["app", "audio", "stt", "diarization", "detection", "retrieval", "llm", "ui"]

[project.dependencies]
faster-whisper = "*"
pyannote-audio = "*"
sounddevice = "*"
numpy = "*"
sentence-transformers = "*"
faiss-cpu = "*"
chromadb = "*"
aiohttp = "*"
pyside6 = "*"
